src-errormsg/E05-BoolForInteger/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E05-BoolForInteger/Plinth.hs:28:15: error: [GHC-83865]
    • Couldn't match expected type ‘Integer’ with actual type ‘Bool’
    • In the expression: True
      In a case alternative: Amount n -> True
      In the expression:
        case w of
          Amount n -> True
          Joint x y -> netWithdraw x + netWithdraw y
          Deduct n from -> netWithdraw from - n
   |
28 |   Amount n -> True
   |               ^^^^
